# streampanel

./: .babelrc  .editorconfig  .gitignore  Makefile  README.md  app.py  itermocil.yml  package-lock.json  package.json  pyproject.toml  readme.md  webpack.config.js
public/: index.html  oldapp.html
server/: app.py  main.py  pyproject.toml  readme.md  stream.service
src/js/: index.js
src/js/backgrounds/: Background.jsx  BackgroundImage.jsx  Gradient.jsx  ParticleField.jsx  Starfield.jsx  Visualizer.jsx
src/js/components/: Background.jsx  BossList.jsx  Controller.jsx  Gamepad.jsx  Gradient.jsx  ItemList.jsx  SettingsWindow.jsx  Spotify.jsx  Starfield.jsx  Stopwatch.jsx  Visualizer.jsx
src/js/containers/: App.jsx  Launcher.jsx
src/js/games/: FinalFantasy6.jsx  SuperMetroid.jsx
src/js/util/: BossList.jsx  ColorPicker.jsx  InputGroup.jsx  ItemList.jsx  SettingsWindow.jsx  container.js  functions.js  storage.js
src/scss/: _color_picker.scss  _mixins.scss  index.scss
templates/: index.html
