[tool.poetry]
name = "sidebar"
version = "0.1.0"
description = "backend stuff for the sidebar"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
spotipy = "^2.12.0"
python-dotenv = "^0.14.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
